--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
       <div class="buttons-container">
         <a href="SipTapTemplate.xlsx" class="button">Download SipCard Template</a>
         <a href="DemoRequest.html" class="button">Discover SipCard Examples</a>
-        <a href="ReadySaleSheetB.html" class="button">Check the Benefit!</a>
+        <a href="Tignanello.html" class="button">Tignanello by Antinori</a>
        
         
       </div>
