--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 </p>
                 
                 <div class="wine-buttons-container">
-                    <a href="#" class="wine-button tignanello" onclick="alert('Opening Tignanello By Antinori 2019 - Technical Sheet')">
+                    <a href="Tignanello.html" class="wine-button tignanello" onclick="alert('Opening Tignanello By Antinori 2019 - Technical Sheet')">
                         <div class="wine-icon">🍷</div>
                         <div class="wine-details">
                             <h3>Tignanello</h3>
@@ -518,7 +518,7 @@
                         </div>
                     </a>
                     
-                    <a href="#" class="wine-button jermann" onclick="alert('Opening Jermann - Dreams 2020 - Technical Sheet')">
+                    <a href="Dreams.html" class="wine-button jermann" onclick="alert('Opening Jermann - Dreams 2020 - Technical Sheet')">
                         <div class="wine-icon">🥂</div>
                         <div class="wine-details">
                             <h3>Dreams</h3>
