--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                         </div>
                     </a>
                     
-                    <a href="Dreams.html" class="wine-button jermann" onclick="alert('Opening Jermann - Dreams 2020 - Technical Sheet')">
+                    <a href="Dreams 2020.html" class="wine-button jermann" onclick="alert('Opening Jermann - Dreams 2020 - Technical Sheet')">
                         <div class="wine-icon">🥂</div>
                         <div class="wine-details">
                             <h3>Dreams</h3>
