--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 <div class="wine-buttons-container">
                     <a href="Tignanello.html" class="wine-button tignanello" onclick="alert('Opening Tignanello By Antinori 2019 - Technical Sheet')">
                         <div class="wine-icon">
-                            <img src="https://images.unsplash.com/photo-1556909114-f6e7ad7d3136?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Red wine glass" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
+                            <img src="" alt="Red wine glass" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
                         </div>
                         <div class="wine-details">
                             <h3>Tignanello</h3>
@@ -485,7 +485,7 @@
                     
                     <a href="Dreams 2020.html" class="wine-button jermann" onclick="alert('Opening Jermann - Dreams 2020 - Technical Sheet')">
                         <div class="wine-icon">
-                            <img src="https://images.unsplash.com/photo-1547595628-c61a29f496f0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="White wine glass" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
+                            <img src="" alt="White wine glass" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
                         </div>
                         <div class="wine-details">
                             <h3>Dreams</h3>
@@ -552,7 +552,7 @@
                     </div>
                     <div class="winemaker-card">
                         <div class="region-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Coat_of_arms_of_South_Tyrol.svg/200px-Coat_of_arms_of_South_Tyrol.svg.png" alt="Alto Adige Coat of Arms">
+                            <img src="By This <a href="https://en.wikipedia.org/wiki/Vector_images" class="extiw" title="w:Vector images">vector image</a> was created with <a href="https://en.wikipedia.org/wiki/Inkscape" class="extiw" title="w:Inkscape">Inkscape</a> by v . - <span typeof="mw:File"><a href="//commons.wikimedia.org/wiki/File:Suedtirol_CoA.svg" class="mw-file-description"></a></span>, Public Domain, <a href="https://commons.wikimedia.org/w/index.php?curid=1756279">Link</a>" alt="Alto Adige Coat of Arms">
                         </div>
                         <h4>Alto Adige</h4>
                         <p>Alpine experiences from the Dolomite high altitude vineyards, Pinot Nero from the Poetic Mazzon, Gewurtz from Tramin, Kerner from Valle Isarco & more</p>
