--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 
                 <div class="wine-buttons-container">
                     <a href="Tignanello.html" class="wine-button tignanello" onclick="alert('Opening Tignanello By Antinori 2019 - Technical Sheet')">
-                        <div class="wine-icon">🍷</div>
+                        <div class="wine-icon"></div>
                         <div class="wine-details">
                             <h3>Tignanello</h3>
                             <p>By Antinori 2019</p>
@@ -483,7 +483,7 @@
                     </a>
                     
                     <a href="Dreams 2020.html" class="wine-button jermann" onclick="alert('Opening Jermann - Dreams 2020 - Technical Sheet')">
-                        <div class="wine-icon">🥂</div>
+                        <div class="wine-icon"></div>
                         <div class="wine-details">
                             <h3>Dreams</h3>
                             <p>Jermann 2020</p>
@@ -514,42 +514,42 @@
                 <div class="winemakers-grid">
                     <div class="winemaker-card">
                         <div class="region-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Coat_of_arms_of_Tuscany.svg/200px-Coat_of_arms_of_Tuscany.svg.png" alt="Toscana Coat of Arms">
+                            <img src="Coat_of_arms_of_Tuscany.svg.png" alt="Toscana Coat of Arms">
                         </div>
                         <h4>Toscana</h4>
                         <p>Collaboration with historic wineries of Chianti Classico, Brunello di Montalcino, Bolgheri & elevated SuperTuscan producers</p>
                     </div>
                     <div class="winemaker-card">
                         <div class="region-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Regione-Piemonte-Stemma.svg/200px-Regione-Piemonte-Stemma.svg.png" alt="Piemonte Coat of Arms">
+                            <img src="Regione-Piemonte-Stemma.svg.png" alt="Piemonte Coat of Arms">
                         </div>
                         <h4>Piemonte</h4>
                         <p>Partnership with Barolo and Barbaresco producers from the Langhe as well as curated producers from Monferrato, Colli Totonesi & Colline Novarese</p>
                     </div>
                     <div class="winemaker-card">
                         <div class="region-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Coat_of_Arms_of_Veneto.png/200px-Coat_of_Arms_of_Veneto.png" alt="Veneto Coat of Arms">
+                            <img src="Coat_of_Arms_of_Veneto.png" alt="Veneto Coat of Arms">
                         </div>
                         <h4>Veneto</h4>
                         <p>Direct selection from Valpolicella and Amarone producers as well as the finest producers from Soave, Garda, Valdobbiadene, & Piave</p>
                     </div>
                     <div class="winemaker-card">
                         <div class="region-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Regione-Campania-Stemma.svg/200px-Regione-Campania-Stemma.svg.png" alt="Campania Coat of Arms">
+                            <img src="Regione-Campania-Stemma.svgpng" alt="Campania Coat of Arms">
                         </div>
                         <h4>Campania</h4>
                         <p>Historic wineries and experiences from the Amalfi Coast, Tufo, Taurasi, Sannio, Avellino, Cilento, and more</p>
                     </div>
                     <div class="winemaker-card">
                         <div class="region-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Coat_of_arms_of_Sicily.svg/200px-Coat_of_arms_of_Sicily.svg.png" alt="Sicilia Coat of Arms">
+                            <img src="Coat_of_arms_of_Sicily.svg.png" alt="Sicilia Coat of Arms">
                         </div>
                         <h4>Sicilia</h4>
                         <p>Terroir driven experiences from the volcanic minerality of Etna to the Sun drenched heat and ripe fruit of Pantelleria to the magic of the Aeolian islands</p>
                     </div>
                     <div class="winemaker-card">
                         <div class="region-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Coat_of_arms_of_Trentino-South_Tyrol.svg/200px-Coat_of_arms_of_Trentino-South_Tyrol.svg.png" alt="Alto Adige Coat of Arms">
+                            <img src="Coat_of_arms_of_Trentino-South_Tyrol.svg.png" alt="Alto Adige Coat of Arms">
                         </div>
                         <h4>Alto Adige</h4>
                         <p>Alpine experiences from the Dolomite high altitude vineyards, Pinot Nero from the Poetic Mazzon, Gewurtz from Tramin, Kerner from Valle Isarco & more</p>
